# minimal-genus-state-surfaces

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
data/knots/: knots_13_state_codes.csv  knots_14_state_codes.csv  knots_15_state_codes.csv  knots_16_state_codes.csv  knots_17_state_codes.csv  knots_18_state_codes.part1.csv  knots_18_state_codes.part2.csv  knots_3-12_state_codes.csv
data/links/: links_12_state_codes.csv  links_13_state_codes.csv  links_14_state_codes.csv  links_3-11_state_codes.csv
docs/: internals.md  overview.md  usage.md
examples/: trefoil_dt.txt  two_component_link.txt
scripts/: compare_against_original.py
src/state_surfaces/: __init__.py  __main__.py  cli.py  core.py  dt_to_gauss.py  gauss_io.py  genus.py  nonorientable.py  pipeline.py
src/state_surfaces/smoothing/: __init__.py  one_gon.py  three_gon.py  three_gon_anti_triangle.py  three_gon_triangle.py  two_gon.py
tests/: __init__.py  test_dt_to_gauss.py  test_gauss_io.py  test_pipeline_regression.py
